ndb - bug#59751 - only "use" nodes with nodegroup when computing frag-count